@@ -27,6 +27,8 @@ Release 1.4
   driver to set certain session variable values upon connection.
 * Added --show-password option to "\connect --list" because I keep
   forgetting passwords to systems.
+* More care is taken to ensure that database connections are actually
+  formally close()'d when jsqsh exits or a session terminates.
 
 Release 1.3
 * The 'dist-rpm' target and has been updated so that it works on 
